# trld

./: .gitignore  LICENSE  Makefile  README.md  dev-requirements.txt  pixi.toml  pyproject.toml  setup.cfg
.github/workflows/: publish-to-pypi.yml
docs/source/: desc.md
test/: report-base.jsonld  test_c14n.py  test_cli.out  test_cli.sh  test_jsonld_indexing.py  test_misc.sh
test/data/: newlinestrings.jsonld
test/data/diff/item/: v1.jsonld  v2.jsonld  v3.jsonld  v4.jsonld
test/data/examples/: misc.trig  test-basic-context.jsonld  test-basic-data.json  test-basic-data.jsonld  test-custom-context.jsonld  test-custom-data.jsonld  test-denormalized.ttl
test/trig/: test_compact_jsonld_to_trig.py
transpile/: base.py  cstyle.py  java.py  js.py  rust.py  typescanner.py
transpile/templates/java/: build.gradle
transpile/templates/java/src/main/java/trld/: Builtins.java  Common.java  Input.java  Output.java
transpile/templates/java/src/main/java/trld/jsonld/: Cmd.java  Common.java  Docloader.java  LoadDocumentCallback.java  TestRunner.java
transpile/templates/java/src/main/java/trld/platform/: Common.java  Input.java  Io.java
transpile/templates/java/src/main/java/trld/trig/: Test.java
transpile/templates/java/src/main/java/trld/tvm/: Cmd.java  TestRunner.java
transpile/templates/java/src/test/java/trld/jsonld/: TestSuite.java
transpile/templates/js/: package.json
transpile/templates/js/lib/: builtins.js  common.js
transpile/templates/js/lib/jsonld/: cli.js  common.js  main.js
transpile/templates/js/lib/platform/: common.js  io.js
transpile/templates/js/lib/trig/: cli.js  test.js
transpile/templates/js/lib/tvm/: cli.js
transpile/templates/js/test/: test_suite.js
transpile/templates/rust/: Cargo.toml
trld/: __main__.py  api.py  builtins.py  c14n.py  cli.py  common.py  mimetypes.py  rdfterms.py
trld/diff/: __init__.py  __main__.py
trld/diffld/: __init__.py  __main__.py
trld/diffld/tests/: a-b-diff.jsonld  a.jsonld  b.jsonld
trld/extras/: desc.py
trld/jsonld/: __main__.py  base.py  common.py  compaction.py  context.py  docloader.py  expansion.py  flattening.py  invcontext.py  keys.py  rdf.py  star.py  test.py  testbase.py  testcase.py
trld/jsonld/extras/: contexts.py  frameblanks.py  index.py
trld/nq/: parser.py  serializer.py
trld/platform/: common.py  io.py
trld/rdfxml/: parser.py  serializer.py  terms.py  xmlcompat.py
trld/trig/: parser.py  serializer.py  test.py  test_serializer.py
trld/tvm/: __main__.py  base.py  mapmaker.py  mapper.py  test-typefolds.trig  test.py  test_typefolds.py  typefolds.py
