[metadata]
name = TRLD
version = 0.1.0
author = Niklas Lindström
author_email = lindstream@gmail.com
description = Translating Linked Data
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/niklasl/trld
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: 0BSD
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >= 3.6

[options.packages.find]
include = trld*

[options.entry_points]
console_scripts =
    trld = trld.cli:main
