[metadata]
name = trld
version = 0.1.0
author = Niklas Lindström
author_email = lindstream@gmail.com
description = A library of algorithms for working with JSON-LD and translating between various forms of RDF.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/niklasl/trld
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved
    Operating System :: OS Independent
    Typing :: Typed

[options]
package_dir =
packages = find:
python_requires = >= 3.6

[options.packages.find]
include = trld*

[options.package_data]
trld = py.typed

[options.entry_points]
console_scripts =
    trld = trld.cli:main
